# fornix

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.ps1  build.sh  run.sh
engine/: CMakeLists.txt  main.cpp
engine/input/: CMakeLists.txt
engine/input/include/: process_input.hpp
engine/input/src/: process_input.cpp
engine/shaders/: CMakeLists.txt
engine/shaders/include/: shader_program.hpp  shader_program_opengl.hpp  shaders.hpp
engine/shaders/src/: shader_program_opengl.cpp  shaders.cpp
engine/shaders/src/resources/: shader.fs  shader.vs
